<resources>
    <string name="app_name">supernote.org</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="keep_listener_on">keep synced</string>
    <string name="activate_load_to_cache">load to cache every ____</string>
    <string name="deactivate_use_offline">deactivate use offline</string>
    <string name="turn_off_internet_automatically_when_e_connection_shows">internet off when connection slow</string>
    <string name="turn_off_internet_automatically_when_app_started">internet off when app starts</string>
    <string name="swipe_left_to_permanently_delete">swipe left to permanently delete</string>
    <string name="sendWhatsapp">send</string>
    <string name="snooze">snooze</string>
    <string name="trash">trash</string>
    <string name="done">mark done</string>
    <string name="new_note">add new note</string>
    <string name="new_reminder">add new reminder</string>
    <string name="search">search</string>
    <string name="next_time">next time</string>
    <string name="username_text_explaining_what_to_do">change username here:</string>
    <string name="current_username" />
    <string name="share_with_another_user">share with another user</string>
    <string name="go_online_to_login_explaining_text">go online to log in or skip login</string>
</resources>
