<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/turn_off_internet_automatically_when_e_connection_shows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/turn_off_internet_automatically_when_e_connection_shows" />


        <CheckBox
            android:id="@+id/turn_off_internet_automatically_when_app_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/turn_off_internet_automatically_when_app_started" />

        <CheckBox
            android:id="@+id/swipe_left_to_permanently_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/swipe_left_to_permanently_delete" />



        <TextView
            android:id="@+id/username_text_explaining_what_to_do"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_text_explaining_what_to_do"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/check_username_availability"
            android:inputType="text"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:id="@+id/currentUsername"/>

        <AutoCompleteTextView
            android:id="@+id/addFriends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="type a username to add a friend"
            android:completionHint="select a username"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addFriendButton"
            android:text="add username"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/showFriends"
            android:text="show friends list"/>

    </LinearLayout>

</LinearLayout>